# ghrag

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
evals/: README.md  generate_dataset.py
evals/positron/: dataset.json  task_gh.py  task_store.py
scripts/: migrate_metadata.py
src/ghrag/: __init__.py  chat.py  cli.py  github.py  ingest.py  ingest2.py  mcp_server.py  store.py
tests/: conftest.py  test_cli.py  test_github.py  test_ingest.py  test_init.py  test_mcp_server.py  test_store.py
